# soroban-oracle

./: .env.example  .gitignore  Cargo.toml  README.md
contracts/orally_verifyer/: Cargo.toml
contracts/orally_verifyer/src/: ecdsa.rs  interface.rs  lib.rs  sol_types.rs  test.rs  utils.rs
examples/orally_verifyer_example/: Cargo.toml
examples/orally_verifyer_example/src/: lib.rs  test.rs  utils.rs
